adiciona componente lista

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -15,3 +15,11 @@ button {
     background: red;
     color: #FFF;
 }
+.alerta {
+    background: yellow;
+    color: black;
+}
+.default {
+    background: blue;
+    color: white;
+}
